fix overflow issue 4rd

--- a/docs/style.css
+++ b/docs/style.css
@@ -8,7 +8,6 @@
     box-sizing: border-box;
 }
 
-html,
 body {
     background-color: var(--white-color);
     font-family: 'Lato', sans-serif;
